crates/kul-core/tests/snapshots/kin__adoption_multi_parent_edge_tagged.snap
---
source: crates/kul-core/tests/kin.rs
expression: "envelope_json(&check,\n&Query::kin_ancestors(\"dalisay\", IntRange::exactly(1), None))"
---
{
  "ok": true,
  "result": {
    "kind": "members",
    "members": [
      {
        "personId": "carlos",
        "descriptor": {
          "egoId": "dalisay",
          "alterId": "carlos",
          "egoGender": "female",
          "alterGender": "male",
          "classification": {
            "kind": "lineal",
            "role": "ancestor",
            "generations": 1
          },
          "edgeNature": "adoptive",
          "affinity": "blood",
          "sharing": "notApplicable",
          "side": "notApplicable",
          "seniority": "elder",
          "apexSeniority": "notApplicable",
          "path": [
            {
              "step": "up",
              "to": "carlos",
              "gender": "male",
              "edge": "adoptive"
            }
          ]
        }
      },
      {
        "personId": "eduardo",
        "descriptor": {
          "egoId": "dalisay",
          "alterId": "eduardo",
          "egoGender": "female",
          "alterGender": "male",
          "classification": {
            "kind": "lineal",
            "role": "ancestor",
            "generations": 1
          },
          "edgeNature": "blood",
          "affinity": "blood",
          "sharing": "notApplicable",
          "side": "notApplicable",
          "seniority": "elder",
          "apexSeniority": "notApplicable",
          "path": [
            {
              "step": "up",
              "to": "eduardo",
              "gender": "male",
              "edge": "bio"
            }
          ]
        }
      },
      {
        "personId": "elena",
        "descriptor": {
          "egoId": "dalisay",
          "alterId": "elena",
          "egoGender": "female",
          "alterGender": "female",
          "classification": {
            "kind": "lineal",
            "role": "ancestor",
            "generations": 1
          },
          "edgeNature": "adoptive",
          "affinity": "blood",
          "sharing": "notApplicable",
          "side": "notApplicable",
          "seniority": "elder",
          "apexSeniority": "notApplicable",
          "path": [
            {
              "step": "up",
              "to": "elena",
              "gender": "female",
              "edge": "adoptive"
            }
          ]
        }
      },
      {
        "personId": "luz",
        "descriptor": {
          "egoId": "dalisay",
          "alterId": "luz",
          "egoGender": "female",
          "alterGender": "female",
          "classification": {
            "kind": "lineal",
            "role": "ancestor",
            "generations": 1
          },
          "edgeNature": "blood",
          "affinity": "blood",
          "sharing": "notApplicable",
          "side": "notApplicable",
          "seniority": "elder",
          "apexSeniority": "notApplicable",
          "path": [
            {
              "step": "up",
              "to": "luz",
              "gender": "female",
              "edge": "bio"
            }
          ]
        }
      },
      {
        "personId": "rosa",
        "descriptor": {
          "egoId": "dalisay",
          "alterId": "rosa",
          "egoGender": "female",
          "alterGender": "female",
          "classification": {
            "kind": "lineal",
            "role": "ancestor",
            "generations": 1
          },
          "edgeNature": "adoptive",
          "affinity": "blood",
          "sharing": "notApplicable",
          "side": "notApplicable",
          "seniority": "elder",
          "apexSeniority": "notApplicable",
          "path": [
            {
              "step": "up",
              "to": "rosa",
              "gender": "female",
              "edge": "adoptive"
            }
          ]
        }
      },
      {
        "personId": "tomas",
        "descriptor": {
          "egoId": "dalisay",
          "alterId": "tomas",
          "egoGender": "female",
          "alterGender": "male",
          "classification": {
            "kind": "lineal",
            "role": "ancestor",
            "generations": 1
          },
          "edgeNature": "adoptive",
          "affinity": "blood",
          "sharing": "notApplicable",
          "side": "notApplicable",
          "seniority": "elder",
          "apexSeniority": "notApplicable",
          "path": [
            {
              "step": "up",
              "to": "tomas",
              "gender": "male",
              "edge": "adoptive"
            }
          ]
        }
      }
    ]
  }
}
