crates/kul-core/tests/snapshots/kin__empty_parent_set_is_empty_members.snap
---
source: crates/kul-core/tests/kin.rs
expression: "envelope_json(&check,\n&Query::kin_ancestors(\"hiroshi\", IntRange::exactly(1), None))"
---
{
  "ok": true,
  "result": {
    "kind": "members",
    "members": []
  }
}
