crates/kul-core/tests/snapshots/kin__nuclear_children.snap
---
source: crates/kul-core/tests/kin.rs
expression: "envelope_json(&check,\n&Query::kin_descendants(\"hiroshi\", IntRange::exactly(1), None))"
---
{
  "ok": true,
  "result": {
    "kind": "members",
    "members": [
      {
        "personId": "akiko",
        "descriptor": {
          "egoId": "hiroshi",
          "alterId": "akiko",
          "egoGender": "male",
          "alterGender": "female",
          "classification": {
            "kind": "lineal",
            "role": "descendant",
            "generations": 1
          },
          "edgeNature": "blood",
          "affinity": "blood",
          "sharing": "notApplicable",
          "side": "notApplicable",
          "seniority": "younger",
          "apexSeniority": "notApplicable",
          "path": [
            {
              "step": "down",
              "to": "akiko",
              "gender": "female",
              "edge": "bio"
            }
          ]
        }
      },
      {
        "personId": "kenji",
        "descriptor": {
          "egoId": "hiroshi",
          "alterId": "kenji",
          "egoGender": "male",
          "alterGender": "male",
          "classification": {
            "kind": "lineal",
            "role": "descendant",
            "generations": 1
          },
          "edgeNature": "blood",
          "affinity": "blood",
          "sharing": "notApplicable",
          "side": "notApplicable",
          "seniority": "younger",
          "apexSeniority": "notApplicable",
          "path": [
            {
              "step": "down",
              "to": "kenji",
              "gender": "male",
              "edge": "bio"
            }
          ]
        }
      }
    ]
  }
}
